More customization settings

--- a/src/main/resources/language/messages_en.yml
+++ b/src/main/resources/language/messages_en.yml
@@ -19,6 +19,14 @@ messages:
   config-reloaded: '%prefix% &eEverything has been reloaded, %player%!'
   wrong-usage: '%prefix% &cWrong usage. /sst help'
 
+  user-statuses:
+    tpa:
+      true: ACCEPTS
+      false: NOT ACCEPTS
+    msg:
+      true: ACCEPTS
+      false: NOT ACCEPTS
+
   vanish:
     activated: '%prefix% &eVanish mode: &bENABLED'
     disabled: '%prefix% &eVanish mode: &cDISABLED'
