--- a/src/main/resources/language/messages_en.yml
+++ b/src/main/resources/language/messages_en.yml
@@ -239,3 +239,7 @@ messages:
     modes:
       true: '&benabled'
       false: '&cdisabled'
+
+  tphere:
+    type-player: '%prefix% &cPlease type an online player name.'
+    wrong-usage: '%prefix% &c/tphere <player>'
